--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ latent space editing">
   <title>Encode-in-Style: Latent-based Video Encoding using StyleGAN2</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-M8C30FX58E"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FBHPZN38ZP"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
 
@@ -22,7 +22,7 @@ latent space editing">
 
     gtag('js', new Date());
 
-    gtag('config', 'G-M8C30FX58E');
+    gtag('config', 'G-FBHPZN38ZP');
   </script>
 
 
