--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ latent space editing">
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/"
+                <a href="https://github.com/trevineoorloff/Encode-in-Style"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
