--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ latent space editing">
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://github.com/"
+                <a href="https://github.com/trevineoorloff/Encode-in-Style"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="far fa-images"></i>
