--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ latent space editing">
             <span class="author-block">
               <a href="">Trevine Oorloff</a>,</span>
             <span class="author-block">
-              <a href="https://www.umiacs.umd.edu/people/yaser">Yaser Yacoob</a>,</span>
+              <a href="https://www.umiacs.umd.edu/people/yaser">Yaser Yacoob</a></span>
           </div>
 
           <div class="is-size-5 publication-authors">
@@ -201,12 +201,9 @@ latent space editing">
           are consistent with real face deformations.
         </p>
         <p>
-          To the best of our knowledge we are the first,
-          <ul>
-            <li> in automating the editing of latent spaces in contrast to the prevailing
+          To the best of our knowledge we are the first, (1) in automating the editing of latent spaces in contrast to the prevailing
             work on latent-space editing that illustrates plausible semantic visual results
-            (e.g. smiles, hair color, gaze) </li>
-            <li> to propose an extremely compact latent-based facial video encoding scheme </li>
+            (e.g. smiles, hair color, gaze) (2) to propose an extremely compact latent-based facial video encoding scheme.
         </p>
       </div>
     <!--/ Introduction. -->
