--- a/index.html
+++ b/index.html
@@ -202,8 +202,9 @@ latent space editing">
         </p>
         <p>
           To the best of our knowledge we are the first, (1) in automating the editing of latent spaces in contrast to the prevailing
-          work on latent-space editing that illustrates plausible semantic visual results (e.g. smiles, hair color, gaze), to capture extremely fine,
-          rich, and complex facial deformations, and (2) to propose an extremely compact latent-based facial video encoding scheme.
+          work on latent-space editing that illustrates plausible semantic visual results (e.g. smiles, hair color, gaze),
+          and (2) to propose an extremely compact latent-based facial video encoding scheme that captures extremely fine,
+          rich, and complex facial deformations.
         </p>
       </div>
     <!--/ Introduction. -->
