--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ latent space editing">
          href="">
         <i class="fas fa-file-pdf"></i>
       </a>
-      <a class="icon-link" href="https://github.com/trevineoorloff" class="external-link" disabled>
+      <a class="icon-link" href="https://github.com/trevineoorloff/Encode-in-Style" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
     </div>
