--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="An end-to-end facial video encoding approach
         that facilitates data-efficient high-quality video re-synthesis by optimizing
         low-dimensional edits of a single Identity-latent.">
-  <meta name="keywords" content="video resynthesis, video encoding, StyleGAN, image inversion,
+  <meta name="keywords" content="encode in style, video resynthesis, video encoding, StyleGAN, image inversion,
 latent space editing">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Encode-in-Style: Latent-based Video Encoding using StyleGAN2</title>
