--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ latent space editing">
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://arxiv.org/pdf/2203.14512.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -94,7 +94,7 @@ latent space editing">
               </span>
               <!-- arxiv Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://arxiv.org/abs/2203.14512"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -356,10 +356,10 @@ latent space editing">
   <div class="container is-widescreen content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{oorloff2022encodeinstyle,
-      title={Stitch it in Time: GAN-Based Facial Editing of Real Videos},
+      title={Encode-in-Style: Latent-based Video Encoding using StyleGAN2},
       author={Trevine Oorloff and Yaser Yaoob},
       year={2022},
-      eprint={},
+      eprint={2203.14512},
       archivePrefix={arXiv},
       primaryClass={cs.CV},
 }</code></pre>
@@ -372,7 +372,7 @@ latent space editing">
   <div class="container">
     <div class="content has-text-centered">
       <a class="icon-link"
-         href="">
+         href="https://arxiv.org/pdf/2203.14512.pdf">
         <i class="fas fa-file-pdf"></i>
       </a>
       <a class="icon-link" href="https://github.com/trevineoorloff/Encode-in-Style" class="external-link" disabled>
