--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ latent space editing">
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"> University of Maryland - College Park,</span>
+            <span class="author-block"> University of Maryland - College Park</span>
           </div>
 
           <div class="column has-text-centered">
