--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ latent space editing, latent manipulation">
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://arxiv.org/pdf/2203.14512.pdf"
+                <a href="https://cveu.github.io/2023/papers/10.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
