--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ latent space editing, latent manipulation">
           <h1 class="title is-1 publication-title">Expressive Talking Head Video Encoding<br>in StyleGAN2 Latent-Space</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="">Trevine Oorloff</a>,</span>
+              <a href="https://trevineoorloff.github.io/">Trevine Oorloff</a>,</span>
             <span class="author-block">
               <a href="https://www.umiacs.umd.edu/people/yaser">Yaser Yacoob</a></span>
           </div>
