--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ latent space editing, latent manipulation">
     <div class="container is-widescreen">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Expressive Talking Head Video Encoding<br>in StyleGAN2 Latent-Space</h1>
+          <h1 class="title is-1 publication-title">Expressive Talking Head Video Encoding<br>in StyleGAN2 Latent-Space <br>(CVEU Workshop @ ICCV'23 - Best Paper)</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://trevineoorloff.github.io/">Trevine Oorloff</a>,</span>
